2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp:
	Exclude characters '(' and ')' from URL detection.

	* src/site.cpp,
	src/emoticondlg.cpp,
	src/editfavdlg.cpp,
	src/mainframe.cpp,
	src/inputdialog.cpp,
	src/notebook.cpp,
	src/listbox.cpp:
	Replace some char* pointers with std::string to increase reliability.

	* src/telnetcon.cpp:
	Replace the dynamic-allocated buffer with a shared static one.

2005-07-19  Kanru Chen  <koster@debian.org.tw>
	
	* src/telnetcon.cpp:
	Remove io_channel correctly.

	* src/mainframe.cpp
	(OnURLEntryKeyDown):
	Use strdup on gtk_entry_get_text according to API reference to prevent
	reentrance issue.
	Note: must be freed after notetab being killed.
	(OnURLEntryKillFocus):
	Should return gboolean

	* src/telnetcon.cpp:
	Should not assign local variable to member object.

2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp:
	Little bug fix.

2005-07-19  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termview.cpp:
	Add (CTermView::HyperLinkHitTest)

	* src/mainframe.cpp:
	Add a "Reconnect" toolbar button and a "URL bar".
	Fix the ineffective CharPaddingX & CharPaddingY.

	* src/pcmanx_pure_gtk2.cpp
	* src/telnetview.cpp (CTelnetView::OnRButtonDown):
	Add "Copy URL" popup menu.
	
	* src/generalprefpage.cpp:
	Add "AntiAlias" option.

	* src/telnetcon.cpp 
	(CTelnetCon::Connect), 
	(CTelnetCon::ConnectThread), 
	(CTelnetCon::OnConnect), 
	(CTelnetCon::Cleanup):
	Better handling of multi-threading that prevent some crashes caused by 
	thread-unsafe libraries on some platforms.
	Limit the number of concurrent running threads to prevent explosive 
	increase on socket operation which often leads to connection failure.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/telnetcon.cpp:
	Apply patch file provided by chinsan.
	Make some modification to enable compilation on FreeBSD.

2005-07-16  PCMan (Hong Jen Yee)  <hzysoft@sina.com.tw>

	* src/termdata.cpp, 
	src/termview.cpp: